--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
 
       <section>
         <div id="title">
-          <h1>Welcome-to-web-design</h1>
+          <h1>New Headline</h1>
           <p></p>
           <hr>
           <span class="credits left">Project maintained by <a href="https://github.com/kmspina">kmspina</a></span>
